[HuyNH] Fix sonar