@@ -46,7 +46,8 @@ public class UserDetailsImpl implements UserDetails {
     public static UserDetailsImpl build(AppUser user) {
         List<GrantedAuthority> authorities = user.getRoles().stream()
                 .map(role -> new SimpleGrantedAuthority(role.getName().name()))
-                .collect(Collectors.toList());
+                .<GrantedAuthority>map(authority -> authority)
+                .toList();
         return new UserDetailsImpl(
                 user.getId(),
                 user.getUsername(),
